# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md
include/: Chip8.h
src/: Chip8.cpp  main.cpp
